--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "source": "src",
   "scripts": {
     "dev": "vite",
+    "devhost": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
